Atualizei o Log e a temperatura em Linux